# Project_Forge

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  main.c  project.yml
.github/workflows/: cppcheck.yml  pipeline.yml
src/app/: CMakeLists.txt  app_crash_dump.c  app_crash_dump.h  app_fs_stress.c  app_fs_stress.h  app_fsm.c  app_fsm.h  app_main.c  app_main.h  app_ssd1306.c  app_ssd1306.h  app_system.c  app_system.h
src/hal/include/: hal_atomic.h  hal_dio.h  hal_dma.h  hal_flash.h  hal_i2c.h  hal_time.h
src/hal/rp2350/: CMakeLists.txt  hal_dio_rp2350.c  hal_dma_rp2350.c  hal_flash_rp2350.c  hal_i2c_rp2350.c  hal_time_rp2350.c
src/srv/: CMakeLists.txt  srv_fs.c  srv_fs.h  srv_os.c  srv_os.h
src/srv/config/: FreeRTOSConfig.h
src/utils/: CMakeLists.txt  observer.c  observer.h  ring_buffer.c  ring_buffer.h
test/: test_app_fsm.c  test_app_main.c  test_app_system.c  test_observer.c  test_ring_buffer.c  test_srv_fs.c  test_ssd1306.c
tools/: mem_baseline.json  mem_profiler.py  stress_test.py
tools/ci/: Dockerfile  misra.json  run_cppcheck.sh  run_docker_cppcheck.sh
tools/git-hooks/: pre-commit
